NEW: Added responder via trigger parsing

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nedb": "^1.1.2",
     "q": "1.4.1",
     "request": "^2.58.0",
+    "semaphore": "^1.0.3",
     "slack-client": "1.4.1",
     "underscore": "1.7.0"
   },
