--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "body-parser": "^1.13.1",
     "coffee-script": "1.7.1",
     "cron": "^1.0.9",
-    "express": "^4.13.0",
+    "express": "^4.13.1",
     "moment": "^2.10.3",
     "nconf": "0.7.1",
     "nedb": "^1.1.2",
+    "node-uuid": "^1.4.3",
     "q": "1.4.1",
     "request": "^2.58.0",
     "semaphore": "^1.0.3",
