CONFIG: Update package.json config

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/alexcu-/log-bot.git"
+    "url": "git://github.com/alexcu/log-bot.git"
   }
 }
